test/syntax-errors/kinding-01/kinding-01.foster
type case List (a:Type)
  of $Cons a List
  of $Nil
  ;

main = { () };
